# genro-mail-proxy

./: .gitignore  ARCH.md  CLAUDE.md  Dockerfile  LICENSE  LICENSE-BSL-1.1  NOTICE  README.md  TROUBLESHOOTING.md  UNIQUE_VALUE.md  VOLUMES.md  check_loop.py  codecov.yml  config.ini  config.ini.example  config_test.ini  coverage.json  debug-mail-server.py  diagnose.py  docker-compose.yml  example_client.py  example_config.ini  fake_smtp_server.py  mail_service.db  main.py  pyproject.toml  pytest.ini  readthedocs.yml  requirements-dev.txt  requirements.txt  run_test.sh  setup_test_env.sh  test_dispatch.py  verify_structure.py
.github/workflows/: docker.yml  docs.yml  fullstack-tests.yml  publish.yml  tests.yml
async_mail_service/: __init__.py  api.py  config_loader.py  core.py  fetcher.py  logger.py  persistence.py  prometheus.py  rate_limit.py  smtp_pool.py
async_mail_service/attachments/: __init__.py  base.py  inline_fetcher.py  s3_fetcher.py  storage_fetcher.py  url_fetcher.py
docs/: api_reference.rst  architecture_overview.rst  attachments.rst  cli_reference.rst  conf.py  django_integration.rst  example_client.rst  express_integration.rst  faq.rst  features.rst  flask_integration.rst  fullstack_testing.rst  index.rst  installation.rst  large-scale-testing.md  modules.rst  monitoring.rst  multi_tenancy.rst  network_requirements.rst  overview.rst  pec.rst  protocol.rst  security.rst  usage.rst
examples/grafana_dashboard/: email-service-dashboard.json
files/: genro-mail-proxy_Comparison_Matrix.xlsx  genro-mail-proxy_Feature_Comparison.docx
gtext_src/: architecture.md.gtext  overview.md.gtext  subproject_hdr.md
review/: risposta claude.md  risposta_codex.md
src/async_mail_service/: __init__.py  api.py  cli.py  client.py  config_loader.py  core.py  fetcher.py  forms.py  logger.py  mailproxy_db.py  models.py  persistence.py  prometheus.py  rate_limit.py  server.py  smtp_pool.py
src/mail_proxy/: __init__.py  api.py  cli.py  client.py  config_loader.py  core.py  forms.py  logger.py  mailproxy_db.py  prometheus.py  rate_limit.py  server.py  smtp_pool.py
src/sql/: column.py  sqldb.py  table.py
src/storage/: __init__.py  manager.py  node.py
src/tools/: __init__.py  encryption.py  repl.py  uid.py
tests/: conftest.py  test_api.py  test_attachment_cache.py  test_attachment_fetchers.py  test_attachment_manager.py  test_attachments.py  test_bounce_reporting.py  test_cli.py  test_client.py  test_config_loader.py  test_core.py  test_docker_integration.py  test_fetcher.py  test_fullstack_integration.py  test_genro_storage_integration.py  test_http_fetcher.py  test_logger.py  test_models.py  test_multitenant_delivery.py  test_persistence.py  test_prometheus.py  test_rate_limit.py  test_retry.py  test_roundtrip_integration.py  test_smtp_integration.py  test_smtp_pool.py  test_tenants.py  test_volumes.py
tests/_legacy/: test_endpoint_introspection.py
tests/debug_scripts/: test_dispatch_db.py  test_loop_debug.py
tests/docker/: Dockerfile.test  docker-compose.fulltest.yml  docker-compose.test.yml
tests/fullstack/: Dockerfile.proxy  README.md  conftest.py  docker-compose.yml  helpers.py  test_accounts.py  test_attachments.py  test_batch.py  test_bounce.py  test_bounce_live.py  test_delivery_reports.py  test_dispatch.py  test_health.py  test_infrastructure.py  test_isolation.py  test_large_files.py  test_metrics.py  test_priority.py  test_rate_limiting.py  test_retention.py  test_security.py  test_service_control.py  test_smtp_delivery.py  test_smtp_errors.py  test_tenant_auth.py  test_unicode.py  test_validation.py
tests/integration/: __init__.py  conftest.py  test_db_integration.py
(+292 files in other folders)
