# Copyright 2025 Softwell S.r.l.
# Licensed under the Apache License, Version 2.0

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "genro-mail-proxy"
version = "0.4.0"
description = "Asynchronous email dispatcher microservice with scheduling, rate limiting, attachments, and a FastAPI REST API."
readme = "README.md"
license = "Apache-2.0"
requires-python = ">=3.10"
authors = [
    {name = "Genropy Team", email = "info@genropy.org"}
]
keywords = [
    "email",
    "smtp",
    "mail-proxy",
    "fastapi",
    "async",
    "genro",
    "genropy"
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Developers",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Framework :: FastAPI",
    "Topic :: Communications :: Email",
    "Topic :: Internet :: WWW/HTTP :: HTTP Servers",
    "Topic :: Software Development :: Libraries :: Application Frameworks",
    "Typing :: Typed",
]
dependencies = [
    "aiosmtplib>=2.0.0",
    "aiohttp>=3.9.0",
    "aiosqlite>=0.20.0",
    "fastapi>=0.115.0",
    "uvicorn>=0.30.0",
    "prometheus-client>=0.20.0",
    "pydantic>=2.8.0",
    "click>=8.1.0",
    "rich>=13.0.0",
    "requests>=2.31.0",
]

[project.scripts]
mail-proxy = "async_mail_service.cli:main"

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-cov>=4.0",
    "pytest-asyncio>=0.23.0",
    "ruff>=0.1.0",
    "mypy>=1.0",
    "httpx>=0.27.0",
    "aioresponses>=0.7.0",
    "aiosmtpd>=1.4.0",
    "pytest-docker>=3.0.0",
]
docs = [
    "sphinx>=8.0.0",
    "sphinx-rtd-theme>=3.0.0",
    "sphinx-autodoc-typehints>=3.0.0",
    "myst-parser>=4.0.0",
    "sphinxcontrib-mermaid>=1.0.0",
]
all = [
    "genro-mail-proxy[dev,docs]",
]

[project.urls]
Homepage = "https://github.com/genropy/genro-mail-proxy"
Documentation = "https://genro-mail-proxy.readthedocs.io"
Repository = "https://github.com/genropy/genro-mail-proxy"
Issues = "https://github.com/genropy/genro-mail-proxy/issues"

[tool.hatch.build.targets.wheel]
packages = ["src/async_mail_service"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-v --cov=async_mail_service --cov-report=term-missing --cov-report=html --cov-report=xml"
markers = [
    "network: marks tests as requiring network access (deselect with '-m \"not network\"')",
]

[tool.black]
line-length = 100
target-version = ["py310"]

[tool.ruff]
target-version = "py310"
line-length = 100
src = ["src"]

[tool.ruff.lint]
select = [
    "E",      # pycodestyle errors
    "W",      # pycodestyle warnings
    "F",      # Pyflakes
    "I",      # isort
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
]
ignore = [
    "E501",   # line too long
    "B008",   # no function calls in arg defaults
]

[tool.ruff.lint.isort]
known-first-party = ["async_mail_service"]

[tool.mypy]
python_version = "3.10"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = false
files = ["src/async_mail_service"]

[tool.coverage.run]
source = ["src/async_mail_service"]
branch = true

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
    "@abstractmethod",
    "\\.\\.\\.",
]
